@@ -35,6 +35,7 @@
     <java.version>1.8</java.version>
     <jcl-over-slf4j.version>1.7.28</jcl-over-slf4j.version>
     <junit.jupiter.version>5.5.2</junit.jupiter.version>
+    <swagger-request-validator.version>2.8.3</swagger-request-validator.version>
     <!-- plugin versions-->
     <junit.version>4.12</junit.version>
     <junit.vintage.version>5.5.2</junit.vintage.version>
